test_src/compiler_errors/types/binary/XorFloatError2.b
class XorFloatError2 {
    void test() {
        println(14.0 ^ 42);
    }
}
